docker-k8s/k8s/deploy-sha.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunxufei-sha
  labels:
    app: sha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sha
  template:
    metadata:
      labels:
        app: sha
    spec:
      containers:
      - name: sha
        image: sunxufei/sha
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 3000
