docker-k8s/k8s/service-pvg.yml
apiVersion: v1
kind: Service
metadata:
  name: sunxufei-pvg
spec:
  ports:
  - port: 81
    protocol: TCP
    targetPort: 3000
  selector:
    app: pvg
