docker-k8s/k8s/service-sha.yml
apiVersion: v1
kind: Service
metadata:
  name: sunxufei-service-sha
spec:
  ports:
  - port: 81
    protocol: TCP
    targetPort: 3000
  selector:
    app: sha
